fix: chat overstretch on mobile screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -198,8 +198,8 @@
   }
 }
 @layer utilities {
-  .error-check{
-    @apply border-4 border-red-500
+  .error-check {
+    @apply border-4 border-red-500;
   }
 }
 
